--- a/assets/love.css
+++ b/assets/love.css
@@ -12,18 +12,25 @@ margin: 10px;
 display: inline-block;
 }
 
+.text0 {
+    color: white;    
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 .text1 {
     color: white;
     font-size: 30px;
     letter-spacing: 2px;
     font-family: monospace;
-    border-right: 2px solid white;
+     border-right: 2px solid white;
     width: 100%;
     white-space: nowrap;
     overflow: hidden;
-    animation: typing 3s steps(34), clr 0.1s forwards, cursor .4s step-end 16 alternate;
+ animation: typing 3s steps(34), clr 0.1s forwards, cursor .4s step-end 16 alternate;
+      animation-delay: 0s;
 }
-
 
 .text2 {
     color: white;
